Fixed plugin registration and unregistration.